# TypstPad

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
.github/workflows/: docker-release.yml
public/: loader.css  robots.txt  sitemap.xml  sw.js  theme-init.js
scripts/: download-fonts.js
server/: .gitignore  Dockerfile  README.md  go.mod  main.go
server/internal/auth/: github.go  handler.go  session.go
server/internal/db/: db.go  users.go
server/internal/middleware/: cors.go
server/internal/ocr/: handler.go  provider.go  usage.go
server/internal/saves/: handler.go  store.go
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai.rs  lib.rs  main.rs
src/components/: LoginDialog.tsx  OcrIntroDialog.tsx
src/components/AIChatSidebar/: AIChatSidebar.tsx
src/components/AISettingsDialog/: AISettingsDialog.tsx
src/contexts/: ThemeContext.tsx
src/data/: mathSymbols.ts  typstSymbolCompletions.ts
src/grammars/: typst.tmLanguage.json
src/hooks/: useVersionCheck.ts
src/i18n/: index.tsx  mathTooltips.ts
src/navigation/: routes.test.ts  routes.ts
src/pages/: AboutPage.tsx  DocsPage.tsx  NotFoundPage.tsx
src/services/: accountSaves.ts  ai.ts  fonts.ts  ocr.ts  typst.ts  versionService.ts
src/types/: formula.ts  version.ts
src/utils/: aiCompletion.ts  base64.ts  export.ts  monacoConfig.ts  share.test.ts  share.ts  shikiSetup.ts  storage.test.ts  storage.ts  svg.ts  typstCompletions.ts
(+22 files in other folders)
